--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/backend/node_modules
 /.pnp
 .pnp.js
 
@@ -10,8 +10,10 @@
 
 # production
 /build
+/dist
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
